# SGCS2

./: .gitignore  .gitmodules  AppConfigureView.qml  CMakeLists.txt  Configuration.cpp  Configuration.h  FlightModeControls.qml  MainToolBar.qml  MapConfigureView.qml  MapControls.qml  MapView.qml  MissionEditDrawer.qml  MissionItemEdit.qml  MissionLoadDrawer.qml  MissionModeControls.qml  MissionSelectOperationItemEdit.qml  MissionSimplePointItemEdit.qml  PhotoModeControls.qml  Photobase_en_US.ts  Photobase_ru_RU.ts  README.md  SGCS2.pro  SGCS2_ru_RU.ts  StreamConfigureView.qml  VideoViewV4L2Item.cpp  VideoViewV4L2Item.h  main.cpp  main.qml  qml.qrc  version.h  version.h.in
connection/: Connection.cpp  Connection.h  ConnectionType.cpp  ConnectionType.h  SerialConnection.cpp  SerialConnection.h  UDPConnection.cpp  UDPConnection.h
icons/light/: index.theme
mavlink/: MavlinkARMRequest.cpp  MavlinkARMRequest.h  MavlinkErrorStream.cpp  MavlinkErrorStream.h  MavlinkHomePositionRequest.cpp  MavlinkHomePositionRequest.h  MavlinkHomePositionStreamer.cpp  MavlinkHomePositionStreamer.h  MavlinkMainDataStream.cpp  MavlinkMainDataStream.h  MavlinkManualControlRequest.cpp  MavlinkManualControlRequest.h  MavlinkMissionReadRequest.cpp  MavlinkMissionReadRequest.h  MavlinkMissionWriteRequest.cpp  MavlinkMissionWriteRequest.h  MavlinkPhotoModeRequest.cpp  MavlinkPhotoModeRequest.h  MavlinkPhotoPayloadStream.cpp  MavlinkPhotoPayloadStream.h  MavlinkPingRequest.cpp  MavlinkPingRequest.h  MavlinkPositionDataStream.cpp  MavlinkPositionDataStream.h  MavlinkRequest.h  MavlinkSensorsDataStream.cpp  MavlinkSensorsDataStream.h  MavlinkStream.h  MavlinkStreamer.cpp  MavlinkStreamer.h  ModeHelper.h
streamer/: ARMRequest.h  DataStreamer.cpp  DataStreamer.h  ErrorStreamer.h  HomePositionRequest.h  HomePositionStreamer.h  MainDataStream.h  ManualControlRequest.h  MissionReadRequest.h  MissionWriteRequest.h  PhotoModeRequest.h  PhotoPayloadStream.h  PositionDataStream.h  SensorsDataStream.h
uav/: Failsafe.cpp  Failsafe.h  Mission.cpp  Mission.h  MissionItem.cpp  MissionItem.h  PhotoPayload.cpp  PhotoPayload.h  Positioning.cpp  Positioning.h  Sensors.cpp  Sensors.h  UAV.cpp  UAV.h
video/: videosvertextshader.frag.qsb  videosvertextshader.vert.qsb
